# my_solo_chain

./: Cargo.toml  README.md  rust-toolchain.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: config.rs  errors.rs  events.rs  extrinsics.rs  hooks.rs  impls.rs  lib.rs  mock.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs
