[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }

# substrate client
sc-cli = { workspace = true }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-basic-authorship = { workspace = true }

# substrate primitives
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }

# frame and pallets
frame-system = { workspace = true }
pallet-transaction-payment =  { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
solochain-template-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli =  { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"solochain-template-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
