[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { version = "0.24", features = ["server"] }

polkadot-sdk = { workspace = true, features = ["frame-benchmarking",
	"frame-benchmarking-cli",
	"frame-metadata-hash-extension",
	"frame-system",
	"frame-system-rpc-runtime-api",

	"pallet-im-online",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc",

	"sc-authority-discovery",
	"sc-basic-authorship",
	"sc-chain-spec",
	"sc-cli",
	"sc-client-api",
	"sc-consensus",
	"sc-consensus-babe",
	"sc-consensus-babe-rpc",
	"sc-consensus-grandpa",
	"sc-consensus-grandpa-rpc",
	"sc-consensus-slots",
	"sc-executor",
	"sc-network",
	"sc-network-sync",
	"sc-offchain",
	"sc-rpc",
	"sc-rpc-api",
	"sc-rpc-spec-v2",
	"sc-service",
	"sc-storage-monitor",
	"sc-sync-state-rpc",
	"sc-sysinfo",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",

	"sp-api",
	"sp-authority-discovery",
	"sp-block-builder",
	"sp-blockchain",
	"sp-consensus",
	"sp-consensus-babe",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-io",
	"sp-inherents",
	"sp-keyring",
	"sp-keystore",
	"sp-runtime",
	"sp-timestamp",
	"sp-transaction-storage-proof",

	"staging-node-inspect",
	"substrate-frame-rpc-system",
	"substrate-state-trie-migration-rpc", ] }


# Local Dependencies
solochain-template-runtime = { path = "../runtime" }


[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"polkadot-sdk/try-runtime",
]
