[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
	"serde",
] }

polkadot-sdk = { workspace = true, features = [
		"frame-system", 
		"sp-runtime",
		"frame-support",
		"pallet-balances",
		"pallet-timestamp",
		"pallet-transaction-payment",
		"pallet-grandpa",
		"pallet-revive",
		"sp-std",
		"sp-consensus-aura",
		"sp-core",
		"sp-api",
		"sp-version",
		"frame-executive",
		"pallet-insecure-randomness-collective-flip",
		"pallet-sudo",
		"sp-block-builder",
		"sp-transaction-pool",
		"sp-offchain",
		"sp-session",
		"sp-consensus-grandpa",
		"sp-genesis-builder",
		"pallet-transaction-payment-rpc-runtime-api",
		"frame-system-rpc-runtime-api",
		"sp-inherents",
		"pallet-aura"
	] }

# The pallet in this template.
pallet-template = { path = "../pallets/template", default-features = false }
pallet-kitties = { path = "../pallets/kitties", default-features = false }

[build-dependencies]
substrate-wasm-builder = {optional = true, workspace = true, default-features = true }


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-kitties/std",
	"pallet-template/std",
	"polkadot-sdk/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"polkadot-sdk/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]