[package]
name = "polkadot-test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
codec = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = true, features = [
	"serde",
] }

[lints]
workspace = true

# [features]
# default = ["std"]
# std = [
# 	"codec/std",
# 	"sp-runtime/std",
# ]
