[package]
name = "polkadot-test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
codec = { workspace = true }
# overwrite the features as true, then we can call methold like AccountId32::from_str defined in std
sp-runtime = { workspace = true, default-features = true }

[lints]
workspace = true
