[package]
name = "pallet-kitties"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }

# frame deps
polkadot-sdk = {workspace = true, features = ["frame-system", "frame-support", "frame-benchmarking"]}

log = { version = "0.4.21", default-features = false }

[dev-dependencies]
polkadot-sdk = {workspace = true, features = ["sp-core", "sp-io", "sp-runtime", "pallet-insecure-randomness-collective-flip"]}

env_logger = "0.11.5"

[features]
default = ["std"]
std = [
	"codec/std",
	
	"scale-info/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
