[package]
name = "pallet-template"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }

# frame deps
# frame-benchmarking =  { workspace = true, optional = true }
# frame-support = { workspace = true }
# frame-system ={ workspace = true }

polkadot-sdk = {workspace = true, features = ["frame-system", "frame-support", "frame-benchmarking"]}

log = "0.4"

[dev-dependencies]
polkadot-sdk = {workspace = true, features = ["sp-core", "sp-io", "sp-runtime"]}


[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
